--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.2.4",
     "jsqr": "^1.4.0",
     "next": "13.2.4",
+    "next-crypto-icons": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
