--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@mui/material": "^5.11.12",
     "axios": "^1.3.4",
     "bs58": "^5.0.0",
+    "cryptocons": "^1.3.3",
     "cryptocurrency-address-detector": "^1.1.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "jsqr": "^1.4.0",
     "next": "13.2.4",
-    "next-crypto-icons": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
