--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
-    "swr": "^2.1.0"
+    "swr": "^2.1.0",
+    "tesseract.js": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "18.15.0",
